updated presets with copyright and license

--- a/texmf/tex/latex/exercisesMathTUD/exercisesMathTUD.sty
+++ b/texmf/tex/latex/exercisesMathTUD/exercisesMathTUD.sty
@@ -1,4 +1,11 @@
-\ProvidesPackage{exercisesMathTUD}[2019/03/09]
+% This work is licensed under the Creative Commons
+% Attribution-NonCommercial-ShareAlike 4.0 International License. To view a copy
+% of this license, visit http://creativecommons.org/licenses/by-nc-sa/4.0/ or
+% send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.
+
+% (c) Eric Kunze, 2019
+
+\ProvidesPackage{exercisesMathTUD}[2019/03/25]
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % PACKAGE DESCRIPTION |
@@ -20,7 +27,6 @@
 %
 %----------------------
 %
-% Additionally we provide a new font OpenSans with the commands \textos{...} and \osfamily.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
