--- a/texmf/tex/latex/mathscriptMathTUD/mathscriptMathTUD.cls
+++ b/texmf/tex/latex/mathscriptMathTUD/mathscriptMathTUD.cls
@@ -1,4 +1,11 @@
-% (c) Henry Haustein, Daniel Graeveling
+% This work is licensed under the Creative Commons
+% Attribution-NonCommercial-ShareAlike 4.0 International License. To view a copy
+% of this license, visit http://creativecommons.org/licenses/by-nc-sa/4.0/ or
+% send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.
+
+% (c) Eric Kunze, 2019
+
+% inspired by Henry Haustein, Daniel Graeveling
 % https://github.com/henrydatei/TUD_MATH_BA
 
 \NeedsTeXFormat{LaTeX2e}[1995/12/01]
