--- a/texmf/tex/latex/mathworkMathTUD/mathworkMathTUD.sty
+++ b/texmf/tex/latex/mathworkMathTUD/mathworkMathTUD.sty
@@ -1,3 +1,13 @@
+% This work is licensed under the Creative Commons
+% Attribution-NonCommercial-ShareAlike 4.0 International License. To view a copy
+% of this license, visit http://creativecommons.org/licenses/by-nc-sa/4.0/ or
+% send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.
+
+% (c) Eric Kunze, 2019
+
+% inspired by Henry Haustein, Daniel Graeveling
+% https://github.com/henrydatei/TUD_MATH_BA
+
 \ProvidesPackage{mathworkMathTUD}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
