changed file prefix in template

--- a/main_template.tex
+++ b/main_template.tex
@@ -16,10 +16,10 @@
     chapterstyle=framed, %
     sectionstyle=dotted, %
     titlefont=osfamily %
-]{mathscriptMathTUD}
+]{../../texmf/tex/latex/mathscriptMathTUD/mathscriptMathTUD}
 
-\usepackage[order=firstname, fractionappearence=lowerraise]{mathworkMathTUD}
-%\usepackage[presentExercise]{exercisesMathTUD}
+\usepackage[order=firstname, fractionappearence=lowerraise]{../../texmf/tex/latex/mathworkMathTUD/mathworkMathTUD}
+%\usepackage[presentExercise]{../../texmf/tex/latex/exercisesMathTUD/exercisesMathTUD}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
