add MathOperator \Ker

--- a/texmf/tex/latex/mathworkMathTUD/mathworkMathTUD.sty
+++ b/texmf/tex/latex/mathworkMathTUD/mathworkMathTUD.sty
@@ -477,6 +477,7 @@ nobreak,%
 \DeclareMathOperator{\Int}{int} % 2nd time
 \DeclareMathOperator{\id}{id} % Identity
 
+\DeclareMathOperator{\Ker}{Ker}
 \DeclareMathOperator{\kgV}{kgV} % kleinste gemeinsamer Teiler (lcd)
 
 %%%%%% LMN
