updated exercise package

--- a/texmf/tex/latex/exercisesMathTUD/exercisesMathTUD.sty
+++ b/texmf/tex/latex/exercisesMathTUD/exercisesMathTUD.sty
@@ -206,7 +206,7 @@
     }{%
         \ifthenelse{\isempty{#2}}{%
             % topic is injected but score is empty
-            {\osfamily \itshape Thema: #1} \par%
+            {\osfamily \itshape Thema: #1} \\[12pt]%
         }{%
             % topic and score are injected
             \begin{minipage}{\textwidth - 3cm}
