--- a/texmf/tex/latex/mathworkMathTUD/mathworkMathTUD.sty
+++ b/texmf/tex/latex/mathworkMathTUD/mathworkMathTUD.sty
@@ -81,6 +81,8 @@
 
 \RequirePackage{scalerel,stackengine}
 
+\RequirePackage{aligned-overset}
+
 \RequirePackage[amsthm,thmmarks,hyperref]{ntheorem}
 \RequirePackage[ntheorem,framemethod=TikZ]{mdframed}
 
