new changes in own class and packages

--- a/texmf/tex/latex/exercisesMathTUD/exercisesMathTUD.sty
+++ b/texmf/tex/latex/exercisesMathTUD/exercisesMathTUD.sty
@@ -35,9 +35,9 @@
 \RequirePackage[ngerman]{babel}
 \RequirePackage[utf8]{inputenc}
 
-\RequirePackage{amsmath,amssymb,amsfonts}
-\RequirePackage[amsthm,thmmarks,hyperref]{ntheorem}
-\RequirePackage[ntheorem,framemethod=TikZ]{mdframed}
+%\RequirePackage{amsmath,amssymb,amsfonts}
+%\RequirePackage[amsthm,thmmarks,hyperref]{ntheorem}
+%\RequirePackage[ntheorem,framemethod=TikZ]{mdframed}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -194,6 +194,7 @@
     \setcounter{figure}{0}%
     \setcounter{equation}{0}%
     \setcounter{table}{0}%
+    \setcounter{themcount}{0}
     %
     \ifthenelse{\isempty{#1}}{%
         \ifthenelse{\isempty{#2}}{%
