--- a/main_template.tex
+++ b/main_template.tex
@@ -31,32 +31,23 @@
 
 
 %---------------------------------------
-% settings for class mathscriptMathTUD
+% general settings
 %---------------------------------------
 
 \renewcommand{\name}{Eric Kunze}
+\renewcommand{\matnr}{Nummer}
 \renewcommand{\email}{\href{mailto:eric.kunze@mailbox.tu-dresden.de}{\ttfamily eric.kunze@mailbox.tu-dresden.de}}
 
 \renewcommand{\modul}{Modul}
 \renewcommand{\period}{Wintersemester 2018/19}
 
+%\renewcommand{\tutor}{Dr. Legrand}
+%\renewcommand{\group}{Tag x. DS, (un)gerade Woche}
+
+\renewcommand{\lecturer}{Prof. Dr. ...}
 \renewcommand{\faculty}{Mathematik}
 \renewcommand{\institute}{Institut}
 \renewcommand{\professorship}{Professur}
-\renewcommand{\lecturer}{Prof. Dr. ...}
-
-%---------------------------------------
-% settings for exercisesMathTUD
-%---------------------------------------
-
-%\renewcommand{\name}{Eric Kunze}
-%\renewcommand{\matnr}{4679202}
-
-%\renewcommand{\modul}{Modul}
-%\renewcommand{\period}{Wintersemester 2018/19}
-
-%\renewcommand{\tutor}{Dr. Legrand}
-%\renewcommand{\group}{Tag x. DS, (un)gerade Woche}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
