--- a/texmf/tex/latex/exercisesMathTUD/exercisesMathTUD.sty
+++ b/texmf/tex/latex/exercisesMathTUD/exercisesMathTUD.sty
@@ -106,11 +106,11 @@
             \fcolorbox{black}{cdblue!20}{%
                 \begin{minipage}{\dimexpr0.5\linewidth-\fboxrule-\fboxsep}
                     {\huge \textbf{Hausaufgaben}} \vspace{3pt} \\
-                    \textbf{\modul} -- Übungsblatt \theblattcount
+                    \textbf{\themodul} -- Übungsblatt \theblattcount
                 \end{minipage}%
                 \begin{minipage}{\dimexpr0.5\linewidth-\fboxrule-\fboxsep}
-                    \flushright \textbf{\name} (Matr.-Nr. \matnr)\\
-                    Ü-Gruppe: \group
+                    \flushright \textbf{\thename} (Matr.-Nr. \thematnr)\\
+                    Ü-Gruppe: \thegroup
                 \end{minipage}%
         }}%
     }%
@@ -121,12 +121,12 @@
             \fcolorbox{black}{cdblue!20}{%
                 \begin{minipage}{\dimexpr0.5\linewidth-\fboxrule-\fboxsep}
                     {\huge \textbf{Übungsblatt \theblattcount}} \vspace{3pt} \\%
-                    \textbf{\modul}%
+                    \textbf{\themodul}%
                 \end{minipage}%
                 \begin{minipage}{\dimexpr0.5\linewidth-\fboxrule-\fboxsep}
-                    \flushright \textbf{\name} \\%
-                    Übungsleiter: \tutor \\%
-                    \period%
+                    \flushright \textbf{\thename} \\%
+                    Übungsleiter: \thetutor \\%
+                    \theperiod%
                 \end{minipage}%
         }}%
     }%
