--- a/Math-Ba-STOCH/STOCH_Vorlesung/stoch_vorlesung_main.tex
+++ b/Math-Ba-STOCH/STOCH_Vorlesung/stoch_vorlesung_main.tex
@@ -29,29 +29,33 @@
 
 % none
 
-%%%%%%%%% stochastic based commands %%%%%%%%%
-\input{stoch_makros}
 
 %---------------------------------------
 % general settings
 %---------------------------------------
 
-\renewcommand{\name}{Eric Kunze}
-\renewcommand{\matnr}{4779202}
-\renewcommand{\email}{\href{mailto:eric.kunze@mailbox.tu-dresden.de}{\ttfamily eric.kunze@mailbox.tu-dresden.de}}
+\name{Eric Kunze}
+\matnr{Nummer}
+\email{\href{mailto:eric.kunze@mailbox.tu-dresden.de}{\ttfamily eric.kunze@mailbox.tu-dresden.de}}
 
-\renewcommand{\modul}{Stochastik}
-\renewcommand{\period}{Sommersemester 2019}
+\modul{Stochastik}
+\period{Sommersemester 2019}
 
 %\renewcommand{\tutor}{Dr. Legrand}
 %\renewcommand{\group}{Tag x. DS, (un)gerade Woche}
 
-\renewcommand{\lecturer}{Prof. Dr. Anita Behme}
-\renewcommand{\faculty}{Mathematik}
-\renewcommand{\institute}{Stochastik}
-\renewcommand{\professorship}{Angewandte Stochastik}
+\lecturer{Prof. Dr. Anita Behme}
+\faculty{Mathematik}
+\institute{Stochastik}
+\professorship{Angewandte Stochastik}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\counterwithin{themcount}{section}
+\newcommand{\ereignisF}{\mathcal{F}}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 \begin{document}
 
