--- a/Math-Ba-ALGZTH/ALGZTH_Vorlesung/algzth_main.tex
+++ b/Math-Ba-ALGZTH/ALGZTH_Vorlesung/algzth_main.tex
@@ -29,29 +29,27 @@
 
 % none
 
-
 %---------------------------------------
 % general settings
 %---------------------------------------
 
-\renewcommand{\name}{Eric Kunze}
-\renewcommand{\matnr}{Nummer}
-\renewcommand{\email}{\href{mailto:eric.kunze@mailbox.tu-dresden.de}{\ttfamily eric.kunze@mailbox.tu-dresden.de}}
+\name{Eric Kunze}
+\matnr{Nummer}
+\email{\href{mailto:eric.kunze@mailbox.tu-dresden.de}{\ttfamily eric.kunze@mailbox.tu-dresden.de}}
 
-\renewcommand{\modul}{Elemente der Algebra und Zahlentheorie}
-\renewcommand{\period}{Sommersemester 2019}
+\modul{Elemente der Algebra und Zahlentheorie}
+\period{Sommersemester 2019}
 
 %\renewcommand{\tutor}{Dr. Legrand}
 %\renewcommand{\group}{Tag x. DS, (un)gerade Woche}
 
-\renewcommand{\lecturer}{Prof. Dr. Arno Fehm}
-\renewcommand{\faculty}{Mathematik}
-\renewcommand{\institute}{Algebra}
-\renewcommand{\professorship}{Algebra}
+\lecturer{Prof. Dr. Arno Fehm}
+\faculty{Mathematik}
+\institute{Algebra}
+\professorship{Algebra}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newcommand{\begriff}[1]{\textbf{#1}}
 \counterwithin{themcount}{section}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
