update main template

--- a/main_template.tex
+++ b/main_template.tex
@@ -10,12 +10,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[ %
-    ngerman, %
-    a4paper, %
-    sectionreset, %
-    chapterstyle=framed, %
-    sectionstyle=dotted, %
-    titlefont=osfamily %
+ngerman, %
+a4paper, %
+sectionreset, %
+chapterstyle=framed, %
+sectionstyle=dotted, %
+titlefont=osfamily %
 ]{../../texmf/tex/latex/mathscriptMathTUD/mathscriptMathTUD}
 
 \usepackage[order=firstname, fractionappearence=lowerraise]{../../texmf/tex/latex/mathworkMathTUD/mathworkMathTUD}
@@ -34,29 +34,33 @@
 % general settings
 %---------------------------------------
 
-\renewcommand{\name}{Eric Kunze}
-\renewcommand{\matnr}{Nummer}
-\renewcommand{\email}{\href{mailto:eric.kunze@mailbox.tu-dresden.de}{\ttfamily eric.kunze@mailbox.tu-dresden.de}}
+\name{Eric Kunze}
+\matnr{Nummer}
+\email{\href{mailto:eric.kunze@mailbox.tu-dresden.de}{\ttfamily eric.kunze@mailbox.tu-dresden.de}}
 
-\renewcommand{\modul}{Modul}
-\renewcommand{\period}{Wintersemester 2018/19}
+\modul{Modul}
+\period{Wintersemester 2018/19}
 
-%\renewcommand{\tutor}{Dr. Legrand}
-%\renewcommand{\group}{Tag x. DS, (un)gerade Woche}
+%\tutor{Dr. Legrand}
+%\group{Tag x. DS, (un)gerade Woche}
 
-\renewcommand{\lecturer}{Prof. Dr. ...}
-\renewcommand{\faculty}{Mathematik}
-\renewcommand{\institute}{Institut}
-\renewcommand{\professorship}{Professur}
+\lecturer{Prof. Dr. ...}
+\faculty{Mathematik}
+\institute{Institut}
+\professorship{Professur}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% specific commands
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
 \begin{document}
-
-%\MakeTitle[color][additionaltext]
     
-%\tableofcontents
-
-
-
+    %\MakeTitle[color][additionaltext]
+    
+    %\tableofcontents
+    
+    
+    
 \end{document}
